# aws-encryption-provider

./: .gitignore  .go-image-tag  .golangci.yml  .goreleaser.yml  .travis.yaml  .travis.yml  BUILD  Dockerfile  Dockerfile.goreleaser  Gopkg.toml  KOPS.md  Makefile  OWNERS  OWNERS_ALIASES  README.md  SECURITY_CONTACTS  WORKSPACE  cloudbuild.yaml  go.mod  go.sum  main.go  main_test.go
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md
.github/workflows/: ci.yaml  main.yaml  release.yaml
client/: client.go
cloud/: cloud.go  mock.go
cmd/client/: BUILD.bazel  main.go
cmd/clientv2/: main.go
cmd/server/: BUILD.bazel  main.go  main_test.go
connection/: connection.go
hack/: build-client.sh  build-server.sh  run-test.sh  setup-go.sh  verify-gofmt.sh  verify-golint.sh  verify-mod-tidy.sh  verify-vendor.sh
images/: BUILD
pkg/cloud/: BUILD.bazel  cloud.go  cloud_test.go  mock.go
pkg/connection/: BUILD.bazel  connection.go
pkg/healthz/: healthz.go  healthz_test.go
pkg/httputil/: client_test.go
pkg/kmsplugin/: kms.go  kms_test.go
pkg/livez/: livez.go  livez_test.go
pkg/logging/: zap.go
pkg/plugin/: BUILD.bazel  metrics.go  metrics_test.go  plugin.go  plugin_test.go  plugin_v2.go  plugin_v2_test.go  shared_health_check.go
pkg/server/: BUILD.bazel  server.go  server_test.go
pkg/version/: BUILD.bazel  version.go
plugin/: plugin.go  plugin_test.go
server/: server.go
test/integration/: BUILD.bazel  integration_test.go
version/: version.go
