load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cloud.go",
        "mock.go",
    ],
    importpath = "github.com/kubernetes-sigs/aws-encryption-provider/pkg/cloud",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/kms:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/kms/kmsiface:go_default_library",
    ],
)
