load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["connection.go"],
    importpath = "github.com/kubernetes-sigs/aws-encryption-provider/pkg/connection",
    visibility = ["//visibility:public"],
    deps = ["//vendor/google.golang.org/grpc:go_default_library"],
)
